crates/lexeme/tests/ui/wrong_crate_attr.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `wrong`
 --> tests/ui/wrong_crate_attr.rs:4:18
  |
4 | #[lexeme(crate = wrong)]
  |                  ^^^^^ use of undeclared crate or module `wrong`

error[E0433]: failed to resolve: use of undeclared crate or module `wrong`
 --> tests/ui/wrong_crate_attr.rs:3:10
  |
3 | #[derive(Lexeme)]
  |          ^^^^^^ not found in `wrong`
  |
  = note: this error originates in the derive macro `Lexeme` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
  |
1 | use core::lazy::OnceCell;
  |
1 | use lexeme::OnceCell;
  |
1 | use once_cell::sync::OnceCell;
  |
1 | use once_cell::unsync::OnceCell;
  |
    and 1 other candidate

error[E0433]: failed to resolve: use of undeclared crate or module `wrong`
 --> tests/ui/wrong_crate_attr.rs:3:10
  |
3 | #[derive(Lexeme)]
  |          ^^^^^^ not found in `wrong`
  |
  = note: this error originates in the derive macro `Lexeme` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
  |
1 | use lexeme::Regex;
  |
1 | use regex::Regex;
  |
1 | use regex::bytes::Regex;
  |
