crates/lexeme/tests/ui/wrong_crate_attr.rs
use lexeme::Lexeme;

#[derive(Lexeme)]
#[lexeme(crate = wrong)]
pub enum Token {}

fn main() {}
